--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
       <div class="card card-4" >
         <div class="card-4-h2">
-        <h1> <b> our <span>gallery</span> </b> </h1><hr style="margin-left: 650px; width: 70px; border: 3px solid black;" >
+        <h1> <b> our <span>gallery</span> </b> </h1>
     </div>
         <div class="images-4">
         <img src="images/gallery-img1.png" alt="">
@@ -167,9 +167,9 @@
         <div class="map-img">
         <img src="images/map-img.png" alt="">
       </div>
-    <div class="box-shadow">
+    <!-- <div class="box-shadow"> -->
         <!-- <h1>hoow</h1> -->
-    </div>    
+    <!-- </div>     -->
       </div>
 
       <div class="footer-part" style="margin-top: 720px;">
